# Karma-LIVEBOT-V2.0

./: autorepair.py  commands.py  config.py  custom_commands.py  database.py  event.py  event_commands.py  giveaway_commands.py  instantgaming.py  karma_bot.db  live_checker.py  main.py  pyproject.toml  render.yaml  replit.md  requirements.txt  social.py  stats.py  tiktok.py  twitch.py  welcome_commands.py  youtube.py
attached_assets/: Pasted-Giveaway-System-Beschreibung-f-r-Replit-Neue-Datei-giveaway-commands-py-Alle-Befehle-und-Log-1759271070018_1759271070018.txt
