[project]
name = "karma-livebot"
version = "0.1.0"
description = "Discord bot for live stream notifications across Twitch, YouTube, and TikTok"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "brotli>=1.1.0",
    "discord.py>=2.6.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "tiktoklive>=6.6.1",
]
